--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">music</string>
+    <string name="searchBarHint">搜索音乐, 视频, 歌单, 歌手, 用户</string>
 </resources>
